--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,5 @@
 @import url("fontawesome-all.min.css");
-@import url('https://fonts.googleapis.com/css2?family=Playwrite+DE+Grund:wght@100..400&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Itim:400,400italic,700,800");
 
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
@@ -111,7 +111,7 @@ input, select, textarea {
 
 	body, input, select, textarea {
 		color: #6f7577;
-		font-family: "Playwrite", "Helvetica", sans-serif;
+		font-family: "Itim", "Helvetica", sans-serif;
 		font-size: 15pt;
 		font-weight: 400;
 		line-height: 1.75em;
