--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -111,7 +111,7 @@ input, select, textarea {
 
 	body, input, select, textarea {
 		color: #6f7577;
-		font-family: "Itim", Helvetica, sans-serif;
+		font-family: "Itim", system-ui;
 		font-size: 15pt;
 		font-weight: 400;
 		line-height: 1.75em;
