--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -100,7 +100,7 @@ input, select, textarea {
 
 	body, input, select, textarea {
 		color: #fff;
-		font-family: 'Itim', cursive;
+		font-family: 'Itim', system-ui;
 		font-size: 15pt;
 		font-weight: 300 !important;
 		letter-spacing: -0.025em;
